Eduprov : 10-08-2021 : Add Schema org and keyword and add more Testimonial's

--- a/btech-safety-fire.html
+++ b/btech-safety-fire.html
@@ -2,97 +2,107 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title> B.Tech Fire & Safety Engineering Admission, Career | Eduprov</title>
-  <meta name="description" content="B.Tech Fire & Safety Engineering deals with safety measures prevention 
-  of fire hazard learn more about college admission, counselling, career, scope @ EDUPROV">
-  <meta name="keywords"
-    content="safety & fire  engineer salary, safety & fire  engineering salary, safety & fire  engineers 
-    salary, salary for safety & fire  engineer, job for safety & fire  engineer, jobs for safety & fire 
-     engineers, jobs in safety & fire  engineering, safety & fire  engineer jobs, safety & fire  
-     engineering jobs, what is safety & fire  engineering, what is a safety & fire  engineer, safety & fire  engineering college, safety & fire  engineering colleges, safety & fire  engineering courses, safety & fire  engineering course, safety & fire  engineer course, safety & fire  engineer courses, courses in safety & fire  engineering, safety & fire  engineering subjects, how to become a safety & fire  engineer, safety & fire   engineer salary, safety & fire   engineering salary, safety & fire   engineers salary, salary of safety & fire   engineer, safety & fire   college of engineering, safety & fire   engineer college, safety & fire   engineering colleges, colleges with safety & fire   engineering, safety & fire   engineering college, jobs for safety & fire   engineers, safety & fire   engineer job, safety & fire   engineering jobs, job for safety & fire   engineer, jobs in safety & fire   engineering, jobs safety & fire   engineering, safety & fire   course, safety & fire   engineer jobs, safety & fire   engineering courses, safety & fire     engineering admission , safety & fire     engineering syllabus, safety & fire     engineer colleges, safety & fire     engineering colleges, colleges forsafety & fire     engineering, colleges withsafety & fire     engineering, safety & fire     engineer syllabus, safety & fire     engineering college, safety & fire     engineer salaries, college ofsafety & fire     engineering, institution ofsafety & fire     engineers, safety & fire     engineer jobs, safety & fire     engineering universities, safety & fire     engineering jobs, safety & fire     engineering, safety & fire     engineering colleges, safety & fire     engineering, what issafety & fire     engineering, colleges forsafety & fire     engineering, colleges withsafety & fire     engineering, safety & fire     engineering, safety & fire     engineering jobs, job insafety & fire     engineering, jobs forsafety & fire     engineers, jobs insafety & fire     engineering, safety & fire     engineer jobs, jobs withsafety & fire     engineering, safety & fire     engineering subjects, safety & fire     engineering university, car race course engineer, b tech safety & fire     engineering, safety & fire     engineering admission, safety & fire     engineering admission bangalore, admission forsafety & fire     engineering, admission forsafety & fire     engineers, admission onsafety & fire     engineering, safety & fire     engineering scope, how to become ansafety & fire     engineer, scope ofsafety & fire     engineering, safety & fire     engineering meaning, safety & fire     engineering admission, jobs in safety & fire    , safety & fire     engineering career, career insafety & fire     engineering, careers insafety & fire     engineering, safety & fire     engineering career, safety & fire     engineer syllabus per month, average safety & fire     engineer syllabus, what is safety & fire     engineering syllabus, safety & fire     engineering syllabus in us, safety & fire     admission, bestsafety & fire     engineering admission, safety & fire     engineer syllabus, safety & fire     engineer job syllabus, how much dosafety & fire     engineers earn, safety & fire     admission for beginners, safety & fire     engineering admission collection, safety & fire     engineering bangalore admissions,">
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="canonical" href="https://eduprov.com/btech-safety-fire.html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>B.Tech Fire & Safety Engineering Admission Guidance in Bangalore</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://eduprov.com/btech-safety-fire.html"
+      },
+      "headline": "B.Tech Fire & Safety Engineering Admission Guidance in Bangalore",
+      "description": "B.Tech Safety and Fire Engineering is a life-saving course in the field of engineering.
+      Within the course, an aspirant will understand how to tackle conditions in an exclusive time.
+      The course teaches how to take precautions",
+      "image": "https://eduprov.com/images/favicon.png",  
+      "author": {
+        "@type": "Person",
+        "name": "thephotogenicbug"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "Eduprov",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://eduprov.com/images/favicon.png"
+        }
+      },
+      "datePublished": "2021-08-10",
+      "dateModified": "2021-08-10"
+    }
+    </script>
+  <meta name="description" content="B.Tech Safety and Fire Engineering is a life-saving course in the field of engineering.
+  Within the course, an aspirant will understand how to tackle conditions in an exclusive time.
+  The course teaches how to take precautions">
+  <meta name="keywords" content=" 
+  safety & fire  engineer salary, safety & fire  engineering salary, safety & fire  engineers salary, salary for safety & fire  engineer, job for safety & fire  engineer, jobs for safety & fire engineers, jobs in safety & fire  engineering, safety & fire  engineer jobs, safety & fire  engineering jobs, what is safety & fire  engineering, what is a safety & fire  engineer, safety & fire  engineering college, safety & fire  engineering colleges, safety & fire  engineering courses, safety & fire  engineering course, safety & fire  engineer course, safety & fire  engineer courses, courses in safety & fire  engineering, safety & fire  engineering subjects, how to become a safety & fire  engineer, safety & fire   engineer salary, safety & fire   engineering salary, safety & fire   engineers salary, salary of safety & fire   engineer, safety & fire   college of engineering, safety & fire   engineer college, safety & fire   engineering colleges, colleges with safety & fire   engineering, safety & fire   engineering college, jobs for safety & fire   engineers, safety & fire   engineer job, safety & fire   engineering jobs, job for safety & fire   engineer, jobs in safety & fire   engineering, jobs safety & fire   engineering, safety & fire   course, safety & fire   engineer jobs, safety & fire   engineering courses, safety & fire     engineering admission , safety & fire     engineering syllabus, safety & fire     engineer colleges, safety & fire     engineering colleges, colleges forsafety & fire     engineering, colleges withsafety & fire     engineering, safety & fire     engineer syllabus, safety & fire     engineering college, safety & fire     engineer salaries, college ofsafety & fire     engineering, institution ofsafety & fire     engineers, safety & fire     engineer jobs, safety & fire     engineering universities, safety & fire     engineering jobs, safety & fire     engineering, safety & fire     engineering colleges, safety & fire     engineering, what issafety & fire     engineering, colleges forsafety & fire     engineering, colleges withsafety & fire     engineering, safety & fire     engineering, safety & fire     engineering jobs, job insafety & fire     engineering, jobs forsafety & fire     engineers, jobs insafety & fire     engineering, safety & fire     engineer jobs, jobs withsafety & fire     engineering, safety & fire     engineering subjects, safety & fire     engineering university, car race course engineer, b tech safety & fire     engineering, safety & fire     engineering admission, safety & fire     engineering admission bangalore, admission forsafety & fire     engineering, admission forsafety & fire     engineers, admission onsafety & fire     engineering, safety & fire     engineering scope, how to become ansafety & fire     engineer, scope ofsafety & fire     engineering, safety & fire     engineering meaning, safety & fire     engineering admission, jobs in safety & fire    , safety & fire     engineering career, career insafety & fire     engineering, careers insafety & fire     engineering, safety & fire     engineering career, safety & fire     engineer syllabus per month, average safety & fire     engineer syllabus, what is safety & fire     engineering syllabus, safety & fire     engineering syllabus in us, safety & fire     admission, bestsafety & fire     engineering admission, safety & fire     engineer syllabus, safety & fire     engineer job syllabus, how much dosafety & fire     engineers earn, safety & fire     admission for beginners, safety & fire     engineering admission collection, safety & fire     engineering bangalore admissions
+  ">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="B.Tech Fire & Safety Engineering Admission Guidance in Bangalore" />
+  <meta property="og:url" content="https://eduprov.com/btech-safety-fire.html" />
+  <meta property="og:site_name" content="Eduprov Educational Institute" />
+  <meta property="og:description"
+    content="B.Tech Safety and Fire Engineering is a life-saving course in the field of engineering.
+    Within the course, an aspirant will understand how to tackle conditions in an exclusive time.
+    The course teaches how to take precautions" />
+  <meta property="og:image" content="#" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@eduprov" />
+  <meta name="twitter:title" content="B.Tech Fire & Safety Engineering Admission Guidance in Bangalore" />
+  <meta name="twitter:description"
+    content="B.Tech Safety and Fire Engineering is a life-saving course in the field of engineering.
+    Within the course, an aspirant will understand how to tackle conditions in an exclusive time.
+    The course teaches how to take precautions" />
+  <meta name="twitter:image" content="" />
+  <meta name="twitter:url" content="https://twitter.com/eduprov" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
   <meta name="author" content="thephotogenicbug">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
-  <link rel="stylesheet" href="../blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="blog.css" />
+  <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 
 </head>
-
+<!-- , -->
 <body>
-  <div class="bootstrap-nav">
-
-    <nav class="navbar navbar-expand-md  navbar-light bg-dark">
-      <a href="#" class="navbar-brand">
-        <div id="logo">
-          <img src="images/logo-white.png" alt="Edu-logo" />
-        </div>
-      </a>
-      <button type="button " style="background-color: white" class="navbar-toggler ml-5" data-toggle="collapse"
-        data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-
-        <div class="navbar-nav ml-auto ">
-          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i
-              class="fa fa-home"></i> Home</a>
-          <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-phone-square"></i> Contact</a>
-          <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-user"></i> Student Form</a>
-        </div>
-
-      </div>
-
-    </nav>
+  
+  <nav>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
+    </div>
+    <ul class="nav-links">
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov-application.vercel.app/#/">Application Form</a></li>
+    </ul>
+  </nav>
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
-  <!--Nav Bar End-->
-
-  <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
-      height: 350px;
-      background-position: center center;
-      background-size: cover;">
 
     <div class="container text-white">
       <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1>B.Tech Fire & Safety Engineering</h1>
+        <div class="col-md-8 mt-5 pt-3">
+          <h1 class="text-black">B.Tech Fire & Safety Engineering</h1>
         </div>
       </div>
     </div>
-  </div>
 
-  <!--Course Start-->
-  </div>
-  <div class="container mt-2">
-    <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
-          Course
-        </h2>
-        <div id="google_translate_element"></div>
-        <script type="text/javascript">
-          function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-              pageLanguage: 'en'
-            }, 'google_translate_element');
-          }
-        </script>
-
-        <script type="text/javascript"
-          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-        </script>
-      </div>
-    </div>
-  </div>
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-12">
@@ -115,7 +125,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
+        <h2 class="text-center text-dark" id="tag-font">
 
           Scope
         </h2>
