--- a/btech-motorsport.html
+++ b/btech-motorsport.html
@@ -2,109 +2,100 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>B.Tech Motorsport Engineering Admission, Colleges | Eduprov</title>
-  <meta name="description"
-    content="B.Tech Motorsport Engineering student specialize in automobile  motorsports technology. To know about eligibility, admission, top colleges, scope visit EDUPROV">
-  <meta name="keywords"
-    content="motorsport engineer salary, motorsport engineering salary, motorsport engineers salary,
-     salary of motorsport engineer, indian merchant navy salary, motorsport college of engineering, 
-     motorsport engineer college, motorsport engineering colleges, colleges with motorsport engineering, 
-      motorsport engineering college, jobs for motorsport engineers, motorsport engineer job, motorsport 
-      engineering jobs, job for motorsport engineer, jobs in motorsport engineering, jobs motorsport 
-      engineering, motorsport course, motorsport engineer jobs, motorsport engineering courses, motorsport  
-      engineering admission , motorsport   engineering syllabus, motorsport   engineer colleges, motorsport  
-       engineering colleges, colleges formotorsport   engineering, colleges withmotorsport   engineering, 
-       motorsport   engineer syllabus, motorsport   engineering college, motorsport   engineer salaries, 
-       college ofmotorsport   engineering, institution ofmotorsport   engineers, motorsport   engineer jobs, 
-       motorsport   engineering universities, motorsport   engineering jobs, motorsport   engineering, 
-       motorsport   engineering colleges, motorsport   engineering, what ismotorsport   engineering, 
-       colleges formotorsport   engineering, colleges withmotorsport   engineering, motorsport   
-       engineering, motorsport   engineering jobs, job inmotorsport  
-       engineering, jobs formotorsport   engineers, jobs inmotorsport   engineering, motorsport   
-        engineer jobs, jobs withmotorsport   engineering, motorsport   engineering subjects, motorsport   engineering university, car race course engineer, b tech motorsport   engineering, motorsport   engineering admission, motorsport   engineering admission bangalore, admission formotorsport   engineering, admission formotorsport   engineers, admission onmotorsport   engineering, motorsport   engineering scope, how to become anmotorsport   engineer, scope ofmotorsport   engineering, motorsport   engineering meaning, motorsport   engineering admission, jobs in motorsport  , motorsport   engineering career, career inmotorsport   en">
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="canonical" href="https://eduprov.com/btech-motorsport.html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>B.Tech Motorsport Engineering Admission Guidance in Bangalore</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://eduprov.com/btech-motorsport.html"
+      },
+      "headline": "B.Tech Motorsport Engineering Admission Guidance in Bangalore",
+      "description": "B.Tech Motorsport Engineering student specialize in automobile  motorsports technology. To know about eligibility, admission, top colleges, scope visit EDUPROV",
+      "image": "https://eduprov.com/images/favicon.png",  
+      "author": {
+        "@type": "Person",
+        "name": "thephotogenicbug"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "Eduprov",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://eduprov.com/images/favicon.png"
+        }
+      },
+      "datePublished": "2021-08-10",
+      "dateModified": "2021-08-10"
+    }
+    </script>
+  <meta name="description" content="B.Tech Motorsport Engineering student specialize in automobile  motorsports technology. To know about eligibility, admission, top colleges, scope visit EDUPROV">
+  <meta name="keywords" content=" 
+  motorsport engineer salary, motorsport engineering salary, motorsport engineers salary,salary of motorsport engineer, indian merchant navy salary, motorsport college of engineering, motorsport engineer college, motorsport engineering colleges, colleges with motorsport engineering, motorsport engineering college, jobs for motorsport engineers, motorsport engineer job, motorsport engineering jobs, job for motorsport engineer, jobs in motorsport engineering, jobs motorsport engineering, motorsport course, motorsport engineer jobs, motorsport engineering courses, motorsport  engineering admission , motorsport   engineering syllabus, motorsport   engineer colleges, motorsport  engineering colleges, colleges formotorsport   engineering, colleges withmotorsport   engineering, motorsport   engineer syllabus, motorsport   engineering college, motorsport   engineer salaries, college ofmotorsport   engineering, institution ofmotorsport   engineers, motorsport   engineer jobs, motorsport   engineering universities, motorsport   engineering jobs, motorsport   engineering, motorsport   engineering colleges, motorsport   engineering, what ismotorsport   engineering, colleges formotorsport   engineering, colleges withmotorsport   engineering, motorsport   engineering, motorsport   engineering jobs, job inmotorsport  engineering, jobs formotorsport   engineers, jobs inmotorsport   engineering, motorsport   engineer jobs, jobs withmotorsport   engineering, motorsport   engineering subjects, motorsport   engineering university, car race course engineer, b tech motorsport   engineering, motorsport   engineering admission, motorsport   engineering admission bangalore, admission formotorsport   engineering, admission formotorsport   engineers, admission onmotorsport   engineering, motorsport   engineering scope, how to become anmotorsport   engineer, scope ofmotorsport   engineering, motorsport   engineering meaning, motorsport   engineering admission, jobs in motorsport  , motorsport   engineering career,
+  ">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="B.Tech Motorsport Engineering Admission Guidance in Bangalore" />
+  <meta property="og:url" content="https://eduprov.com/btech-motorsport.html" />
+  <meta property="og:site_name" content="Eduprov Educational Institute" />
+  <meta property="og:description"
+    content="B.Tech Motorsport Engineering student specialize in automobile  motorsports technology. To know about eligibility, admission, top colleges, scope visit EDUPROV" />
+  <meta property="og:image" content="#" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@eduprov" />
+  <meta name="twitter:title" content="B.Tech Motorsport Engineering Admission Guidance in Bangalore" />
+  <meta name="twitter:description"
+    content="B.Tech Motorsport Engineering student specialize in automobile  motorsports technology. To know about eligibility, admission, top colleges, scope visit EDUPROV" />
+  <meta name="twitter:image" content="#" />
+  <meta name="twitter:url" content="https://twitter.com/eduprov" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
   <meta name="author" content="thephotogenicbug">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
-  <link rel="stylesheet" href="../blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="blog.css" />
+  <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 
 </head>
 
 <body>
-  <div class="bootstrap-nav">
-
-    <nav class="navbar navbar-expand-md  navbar-light bg-dark">
-      <a href="#" class="navbar-brand">
-        <div id="logo">
-          <img src="images/logo-white.png" alt="Edu-logo" />
-        </div>
-      </a>
-      <button type="button " style="background-color: white" class="navbar-toggler ml-5" data-toggle="collapse"
-        data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-
-        <div class="navbar-nav ml-auto ">
-          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i
-              class="fa fa-home"></i> Home</a>
-          <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-phone-square"></i> Contact</a>
-          <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-user"></i> Student Form</a>
-        </div>
-
-      </div>
-
-    </nav>
+  <nav>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
+    </div>
+    <ul class="nav-links">
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov-application.vercel.app/#/">Application Form</a></li>
+    </ul>
+  </nav>
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
-  <!--Nav Bar End-->
 
-  <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
-      height: 350px;
-      background-position: center center;
-      background-size: cover;">
+
+
 
     <div class="container text-white">
       <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1>B.Tech Motorsport Engineering</h1>
+        <div class="col-md-8 mt-5 pt-3">
+          <h1 class="text-black">B.Tech Motorsport Engineering</h1>
         </div>
       </div>
     </div>
-  </div>
-
-  <!--Course Start-->
-  </div>
-  <div class="container mt-2">
-    <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
-          Course
-        </h2>
-        <div id="google_translate_element"></div>
-        <script type="text/javascript">
-          function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-              pageLanguage: 'en'
-            }, 'google_translate_element');
-          }
-        </script>
-
-        <script type="text/javascript"
-          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-        </script>
-      </div>
-    </div>
-  </div>
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-12">
