--- a/btech-sound-engineering.html
+++ b/btech-sound-engineering.html
@@ -2,93 +2,106 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>B.Tech Sound Engineering Admission, Top Colleges | Eduprov</title>
-  <meta name="description"
-    content="B.Tech Sound Engineering is related to electronic music production. Stay updated on Top Colleges offering this Course, Admission, Overseas education career.">
-  <meta name="keywords"
-    content="Sound engineering admission , Sound engineering syllabus, Sound engineer colleges, Sound engineering colleges, colleges for Sound engineering, colleges with Sound engineering, Sound engineer syllabus, Sound engineering college, Sound engineer salaries, college of Sound engineering, institution of Sound engineers, Sound engineer jobs, Sound engineering institute, Sound engineering jobs, rocket engineering, Sound engineering colleges, Sound engineering, what is Sound engineering, colleges for Sound engineering, colleges with Sound engineering, aircraft engineering, Sound engineering jobs, job in Sound engineering, jobs for Sound engineers, jobs in Sound engineering, Sound engineer jobs, jobs with Sound engineering, Sound engineering subjects, Sound engineering university, aviation engineer, b tech Sound engineering, Sound engineering admission, Sound engineering admission bangalore, admission for Sound engineering, admission for Sound engineers, admission on Sound engineering, Sound engineering scope, how to become an Sound engineer, scope of Sound engineering, Sound engineering meaning, Sound engineering admission, jobs in Sound, Sound engineering career, career in Sound engineering, careers in Sound engineering, Sound engineering career, Sound engineer syllabus per month, average Sound engineer syllabus, what is Sound engineering syllabus, Sound engineering syllabus in us, Sound admission, best Sound engineering admission, Sound engineer syllabus, Sound engineer job syllabus, how much do Sound engineers earn, Sound admission for bangalore admissions, Sound engineering admission collection, Sound engineering reading list,">
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="canonical" href="https://eduprov.com/btech-sound-engineering.html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>B.Tech Sound Engineering Admission Guidance in Bangalore</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://eduprov.com/btech-sound-engineering.html"
+      },
+      "headline": "B.Tech Sound Engineering Admission Guidance in Bangalore",
+      "description": "Sound Engineering is the field of engineering that deals with music, mixing and reproduction,
+        recording, and manipulating The course itself is a changeling and needs more than creativity.
+      To pursue this course a candidate should be having a deep understanding of music.",
+      "image": "https://eduprov.com/images/favicon.png",  
+      "author": {
+        "@type": "Person",
+        "name": "thephotogenicbug"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "Eduprov",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://eduprov.com/images/favicon.png"
+        }
+      },
+      "datePublished": "2021-08-10",
+      "dateModified": "2021-08-10"
+    }
+    </script>
+  <meta name="description" content="Sound Engineering is the field of engineering that deals with music, mixing and reproduction,
+    recording, and manipulating The course itself is a changeling and needs more than creativity.
+  To pursue this course a candidate should be having a deep understanding of music.">
+  <meta name="keywords" content=" 
+  
+  ">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="B.Tech Sound Engineering Admission Guidance in Bangalore" />
+  <meta property="og:url" content="https://eduprov.com/btech-sound-engineering.html" />
+  <meta property="og:site_name" content="Eduprov Educational Institute" />
+  <meta property="og:description"
+    content="Sound Engineering is the field of engineering that deals with music, mixing and reproduction,
+    recording, and manipulating The course itself is a changeling and needs more than creativity.
+  To pursue this course a candidate should be having a deep understanding of music." />
+  <meta property="og:image" content="" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@eduprov" />
+  <meta name="twitter:title" content="B.Tech Sound Engineering Admission Guidance in Bangalore" />
+  <meta name="twitter:description"
+    content="Sound Engineering is the field of engineering that deals with music, mixing and reproduction,
+    recording, and manipulating The course itself is a changeling and needs more than creativity.
+  To pursue this course a candidate should be having a deep understanding of music." />
+  <meta name="twitter:image" content="" />
+  <meta name="twitter:url" content="https://twitter.com/eduprov" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
   <meta name="author" content="thephotogenicbug">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
-  <link rel="stylesheet" href="../blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="blog.css" />
+  <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </head>
-
+<!-- Sound engineering admission , Sound engineering syllabus, Sound engineer colleges, Sound engineering colleges, colleges for Sound engineering, colleges with Sound engineering, Sound engineer syllabus, Sound engineering college, Sound engineer salaries, college of Sound engineering, institution of Sound engineers, Sound engineer jobs, Sound engineering institute, Sound engineering jobs, rocket engineering, Sound engineering colleges, Sound engineering, what is Sound engineering, colleges for Sound engineering, colleges with Sound engineering, aircraft engineering, Sound engineering jobs, job in Sound engineering, jobs for Sound engineers, jobs in Sound engineering, Sound engineer jobs, jobs with Sound engineering, Sound engineering subjects, Sound engineering university, aviation engineer, b tech Sound engineering, Sound engineering admission, Sound engineering admission bangalore, admission for Sound engineering, admission for Sound engineers, admission on Sound engineering, Sound engineering scope, how to become an Sound engineer, scope of Sound engineering, Sound engineering meaning, Sound engineering admission, jobs in Sound, Sound engineering career, career in Sound engineering, careers in Sound engineering, Sound engineering career, Sound engineer syllabus per month, average Sound engineer syllabus, what is Sound engineering syllabus, Sound engineering syllabus in us, Sound admission, best Sound engineering admission, Sound engineer syllabus, Sound engineer job syllabus, how much do Sound engineers earn, Sound admission for bangalore admissions, Sound engineering admission collection, Sound engineering reading list, -->
 <body>
-  <div class="bootstrap-nav">
-
-    <nav class="navbar navbar-expand-md  navbar-light bg-dark">
-      <a href="#" class="navbar-brand">
-        <div id="logo">
-          <img src="images/logo-white.png" alt="Edu-logo" />
-        </div>
-      </a>
-      <button type="button " style="background-color: white" class="navbar-toggler ml-5" data-toggle="collapse"
-        data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-
-        <div class="navbar-nav ml-auto ">
-          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i
-              class="fa fa-home"></i> Home</a>
-          <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-phone-square"></i> Contact</a>
-          <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-user"></i> Student Form</a>
-        </div>
-
-      </div>
-
-    </nav>
+ 
+  <nav>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
+    </div>
+    <ul class="nav-links">
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov-application.vercel.app/#/">Application Form</a></li>
+    </ul>
+  </nav>
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
-  <!--Nav Bar End-->
-
-  <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
-      height: 350px;
-      background-position: center center;
-      background-size: cover;">
 
     <div class="container text-white">
       <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1>B.Tech Sound Engineering </h1>
+        <div class="col-md-8 mt-5 pt-3">
+          <h1 class="text-black">B.Tech Sound Engineering</h1>
         </div>
       </div>
     </div>
-  </div>
 
-  <!--Course Start-->
-  </div>
-  <div class="container mt-2">
-    <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
-          Course
-        </h2>
-        <div id="google_translate_element"></div>
-        <script type="text/javascript">
-          function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-              pageLanguage: 'en'
-            }, 'google_translate_element');
-          }
-        </script>
-
-        <script type="text/javascript"
-          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-        </script>
-      </div>
-    </div>
-  </div>
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-12">
