--- a/btech-textile.html
+++ b/btech-textile.html
@@ -2,94 +2,108 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>B.Tech Textile Engineering Admission Top Colleges | Eduprov</title>
-  <meta name="description" content="B.Tech Textile Engineering is a study of textile and materials. 
-  Click here to know more about Admission, Top Colleges, Counseling, Career & Scope with Eduprov">
-  <meta name="keywords"
-    content="textile  engineer salary, textile engineering salary, textile engineers salary, salary for
-     textile   engineer, job for textile engineer, jobs for textile engineers, jobs in textile  engineering, textile    engineer jobs, textile    engineering jobs, what is textile    engineering, what is a textile    engineer, textile    engineering college, textile    engineering colleges, textile    engineering courses, textile    engineering course, textile    engineer course, textile    engineer courses, courses in textile    engineering, textile    engineering subjects, how to become a textile    engineer, textile     engineer salary, textile     engineering salary, textile     engineers salary, salary of textile     engineer, textile     college of engineering, textile     engineer college, textile     engineering colleges, colleges with textile     engineering, textile     engineering college, jobs for textile     engineers, textile     engineer job, textile     engineering jobs, job for textile     engineer, jobs in textile     engineering, jobs textile     engineering, textile     course, textile     engineer jobs, textile     engineering courses, textile       engineering admission , textile       engineering syllabus, textile       engineer colleges, textile       engineering colleges, colleges fortextile       engineering, colleges withtextile       engineering, textile       engineer syllabus, textile       engineering college, textile       engineer salaries, college oftextile       engineering, institution oftextile       engineers, textile       engineer jobs, textile       engineering universities, textile       engineering jobs, textile       engineering, textile       engineering colleges, textile       engineering, what istextile       engineering, colleges fortextile       engineering, colleges withtextile       engineering, textile       engineering, textile       engineering jobs, job intextile       engineering, jobs fortextile       engineers, jobs intextile       engineering, textile       engineer jobs, jobs withtextile       engineering, textile       engineering subjects, textile       engineering university, car race course engineer, b tech textile       engineering, textile       engineering admission, textile       engineering admission bangalore, admission fortextile       engineering, admission fortextile       engineers, admission ontextile       engineering, textile       engineering scope, how to become antextile       engineer, scope oftextile       engineering, textile       engineering meaning, textile       engineering admission, jobs in textile      , textile       engineering career, career intextile       engineering, careers intextile       engineering, textile       engineering career, textile       engineer syllabus per month, average textile       engineer syllabus, what is textile       engineering syllabus, textile       engineering syllabus in us, textile       admission, besttextile       engineering admission, textile       engineer syllabus, textile       engineer job syllabus, how much dotextile       engineers earn, textile       admission for beginners, textile       engineering admission collection, textile       engineering bangalore admissions,">
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="canonical" href="https://eduprov.com/btech-textile.html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>B.Tech Textile Engineering Admission Guidance in Bangalore</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://eduprov.com/btech-textile.html"
+      },
+      "headline": "B.Tech Textile Engineering Admission Guidance in Bangalore",
+      "description": "B.E/B. Tech Textile Technology is a 4-year degree course. In this course, you will learn
+      about the chemical and physical principles that are used to analyze the polymers of textile
+      fiber.",
+      "image": "https://eduprov.com/images/favicon.png",  
+      "author": {
+        "@type": "Person",
+        "name": "thephotogenicbug"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "Eduprov",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://eduprov.com/images/favicon.png"
+        }
+      },
+      "datePublished": "2021-08-10",
+      "dateModified": "2021-08-10"
+    }
+    </script>
+  <meta name="description" content="B.E/B. Tech Textile Technology is a 4-year degree course. In this course, you will learn
+  about the chemical and physical principles that are used to analyze the polymers of textile
+  fiber.">
+  <meta name="keywords" content=" 
+     textile  engineer salary, textile engineering salary, textile engineers salary, salary for textile   engineer, job for textile engineer, jobs for textile engineers, jobs in textile  engineering, textile    engineer jobs, textile    engineering jobs, what is textile    engineering, what is a textile    engineer, textile    engineering college, textile    engineering colleges, textile    engineering courses, textile    engineering course, textile    engineer course, textile    engineer courses, courses in textile    engineering, textile    engineering subjects, how to become a textile    engineer, textile     engineer salary, textile     engineering salary, textile     engineers salary, salary of textile     engineer, textile     college of engineering, textile     engineer college, textile     engineering colleges, colleges with textile     engineering, textile     engineering college, jobs for textile engineers, textile engineer job, textile engineering jobs, job for textile     engineer, jobs in textile     engineering, jobs textile     engineering, textile     course, textile     engineer jobs, textile engineering courses, textile engineering admission , textile  engineering syllabus, textile engineer colleges, textile engineering colleges, colleges fortextile engineering, colleges withtextile  engineering, textile  engineer syllabus, textile  engineering college, textile engineer salaries, college oftextile  engineering, institution oftextile  engineers, textile  engineer jobs, textile engineering universities, textile engineering jobs, textile engineering, textile engineering colleges, textile engineering, what istextileengineering, colleges fortextile engineering, colleges with textile engineering, textile       engineering, textile       engineering jobs, job intextile       engineering, jobs fortextile       engineers, jobs intextile       engineering, textile       engineer jobs, jobs withtextile       engineering, textile       engineering subjects, textile       engineering university, car race course engineer, b tech textile       engineering, textile       engineering admission, textile       engineering admission bangalore, admission fortextile       engineering, admission fortextile       engineers, admission ontextile       engineering, textile       engineering scope, how to become antextile       engineer, scope oftextile       engineering, textile       engineering meaning, textile       engineering admission, jobs in textile      , textile       engineering career, career intextile       engineering, careers intextile       engineering, textile       engineering career, textile       engineer syllabus per month, average textile       engineer syllabus, what is textile       engineering syllabus, textile       engineering syllabus in us, textile       admission, besttextile       engineering admission, textile       engineer syllabus, textile       engineer job syllabus, how much dotextile       engineers earn, textile       admission for beginners, textile engineering admission collection, textile  engineering bangalore admissions,
+  ">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="B.Tech Textile Engineering Admission Guidance in Bangalore" />
+  <meta property="og:url" content="https://eduprov.com/btech-textile.html" />
+  <meta property="og:site_name" content="Eduprov Educational Institute" />
+  <meta property="og:description"
+    content="B.E/B. Tech Textile Technology is a 4-year degree course. In this course, you will learn
+    about the chemical and physical principles that are used to analyze the polymers of textile
+    fiber." />
+  <meta property="og:image" content="#" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@eduprov" />
+  <meta name="twitter:title" content="B.Tech Textile Engineering Admission Guidance in Bangalore" />
+  <meta name="twitter:description"
+    content="B.E/B. Tech Textile Technology is a 4-year degree course. In this course, you will learn
+    about the chemical and physical principles that are used to analyze the polymers of textile
+    fiber." />
+  <meta name="twitter:image" content="" />
+  <meta name="twitter:url" content="https://twitter.com/eduprov" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
   <meta name="author" content="thephotogenicbug">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
-  <link rel="stylesheet" href="../blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="blog.css" />
+  <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </head>
 
 <body>
-  <div class="bootstrap-nav">
-
-    <nav class="navbar navbar-expand-md  navbar-light bg-dark">
-      <a href="#" class="navbar-brand">
-        <div id="logo">
-          <img src="images/logo-white.png" alt="Edu-logo" />
-        </div>
-      </a>
-      <button type="button " style="background-color: white" class="navbar-toggler ml-5" data-toggle="collapse"
-        data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-
-        <div class="navbar-nav ml-auto ">
-          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i
-              class="fa fa-home"></i> Home</a>
-          <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-phone-square"></i> Contact</a>
-          <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-user"></i> Student Form</a>
-        </div>
-
-      </div>
-
-    </nav>
+  
+ 
+  <nav>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
+    </div>
+    <ul class="nav-links">
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov-application.vercel.app/#/">Application Form</a></li>
+    </ul>
+  </nav>
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
-  <!--Nav Bar End-->
-
-  <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
-      height: 350px;
-      background-position: center center;
-      background-size: cover;">
 
     <div class="container text-white">
       <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1>B.Tech Textile Engineering</h1>
+        <div class="col-md-8 mt-5 pt-3">
+          <h1 class="text-black">B.Tech Textile Engineering</h1>
         </div>
       </div>
     </div>
-  </div>
 
-  <!--Course Start-->
-  </div>
-  <div class="container mt-2">
-    <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
-          Course
-        </h2>
-        <div id="google_translate_element"></div>
-        <script type="text/javascript">
-          function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-              pageLanguage: 'en'
-            }, 'google_translate_element');
-          }
-        </script>
 
-        <script type="text/javascript"
-          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-        </script>
-      </div>
-    </div>
-  </div>
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-12">
@@ -118,7 +132,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
+        <h2 class="text-center text-dark" id="tag-font">
 
           Eligibility
         </h2>
@@ -158,7 +172,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
+        <h2 class="text-center text-dark" id="tag-font">
 
           Scope
         </h2>
