Eduprov : 11-08-2021 : Added Schema org and keyword

--- a/commerce-course-blogs.html
+++ b/commerce-course-blogs.html
@@ -43,13 +43,13 @@
   <meta property="og:url" content="https://eduprov.com/commerce-course-blogs.html" />
   <meta property="og:site_name" content="Eduprov Educational Institute" />
   <meta property="og:description"
-    content="" />
+    content="Commerce is a field which students who have an interest in the field of financial information" />
   <meta property="og:image" content="#" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@eduprov" />
   <meta name="twitter:title" content="Commerce Course Blogs Admission Guidance in Bangalore" />
   <meta name="twitter:description"
-    content="" />
+    content="Commerce is a field which students who have an interest in the field of financial information" />
   <meta name="twitter:image" content="#" />
   <meta name="twitter:url" content="https://twitter.com/eduprov" />
   <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
@@ -120,7 +120,7 @@
               <div class="content">
                 <label class="title fz-20">B. Com (Professionals), Bachelor of Commerce Professionals</label>
                 <div class="desc">
-                  <p>
+                  <p >
                     Bachelor of Commerce [B. Com] (professionals) is an undergraduate degree where one will gain
                     knowledge in areas like
                     accounting, taxation, and finance in the course duration of 3 years.
@@ -138,7 +138,7 @@
               <div class="content">
                 <label class="title fz-20">B.Com Honours (Hons)</label>
                 <div class="desc">
-                  <p>
+                  <p >
                     B.Com Hons deals with functioning of business with knowledge in finance,
                     accounts, taxation & management.
                   </p>
@@ -155,7 +155,7 @@
               <div class="content">
                 <label class="title fz-20">Bachelor of Business Administration</label>
                 <div class="desc">
-                  <p>
+                  <p >
                     Bachelor of Business Administration edify on develop business,
                     marketing, finance, HR, entrepreneurship skills.
                   </p>
@@ -173,7 +173,7 @@
               <div class="content">
                 <label class="title fz-20">Bachelor of Commerce</label>
                 <div class="desc">
-                  <p>
+                  <p >
                     B.Com deals with functioning of
                     business with knowledge in finance, accounts, taxation & management.
                   </p>
@@ -207,7 +207,7 @@
               <div class="content">
                 <label class="title fz-20">M Com (Master of Commerce)</label>
                 <div class="desc">
-                  <p>
+                  <p >
                     M. Com is a postgraduate program in Commerce, finance,
                     economics and accounts related aspects. The duration of this master’s degree course is 2 years.
                   </p>
