--- a/law-course-blogs.html
+++ b/law-course-blogs.html
@@ -34,7 +34,8 @@
     </div>
     <ul class="nav-links">
       <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
-      <li style="font-weight: bold;"><a href="https://eduprov-application.vercel.app/#/">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
     </ul>
   </nav>
   <div id="logo">
@@ -73,7 +74,7 @@
               <div class="content">
                 <label class="title fz-20">LLB Bachelor of legislative law</label>
                 <div class="desc">
-                  <p>
+                  <p id="paragraph-font">
                     Law is a career-oriented course that students can take up after 12th. In India,
                     students can take up legal studies for 3 years with an LLB degree after graduation
                     in any discipline.
