--- a/mba-course-blogs.html
+++ b/mba-course-blogs.html
@@ -79,7 +79,8 @@
     </div>
     <ul class="nav-links">
       <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
-      <li style="font-weight: bold;"><a href="https://eduprov-application.vercel.app/#/">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
     </ul>
   </nav>
   <div id="logo">
@@ -119,7 +120,7 @@
               <div class="content">
                 <label class="title fz-20">MBA Facility Management </label>
                 <div class="desc">
-                  <p>
+                  <p >
                    MBA Facility Management trains in functioning of environments like schools, malls, gyms, sports, & shopping centers.
                   </p>
                 </div>
@@ -151,7 +152,7 @@
               <div class="content">
                 <label class="title fz-20">MBA in Export Management</label>
                 <div class="desc">
-                  <p>
+                  <p >
                     MBA Export Management student learn how to manage process to the operational area of exports.
                   </p>
                 </div>
@@ -184,7 +185,7 @@
               <div class="content">
                 <label class="title fz-20">MBA In Healthcare Management </label>
                 <div class="desc">
-                  <p>
+                  <p> 
                     MBA Healthcare Management student learn management of a healthcare facility, such as clinic, hospital, diagnostic center.
                   </p>
                 </div>
@@ -216,7 +217,7 @@
               <div class="content">
                 <label class="title fz-20">MBA In Logistic Management</label>
                 <div class="desc">
-                  <p>
+                  <p >
                     MBA Logistic Management teaches implementation, controls storage of supply chain & logistic process, requirements.
                   </p>
                 </div>
@@ -232,7 +233,7 @@
               <div class="content">
                 <label class="title fz-20">MBA in Organizational Studies </label>
                 <div class="desc">
-                  <p>
+                  <p >
                     MBA Organizational Behavior teach to handle conflict management. decision-making. motivation & organizational success.
                   </p>
                 </div>
@@ -248,7 +249,7 @@
               <div class="content">
                 <label class="title fz-20">MBA in Retail Management </label>
                 <div class="desc">
-                  <p>
+                  <p >
                     MBA Retail Management student learn retail functions, serves consumers, backend & frontend operations in retail business.
                   </p>
                 </div>
