--- a/medical-course-blogs.html
+++ b/medical-course-blogs.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="canonical" href="https://eduprov.com/medical-course-blogs.html" />
-  <title>Medical Course Admission Guidance in Bangalore - Eduprov</title>
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="canonical" href="https://eduprov.com/" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Medical Course Blogs Admission Guidance in Bangalore</title>
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -15,9 +15,9 @@
         "@type": "WebPage",
         "@id": "https://eduprov.com/medical-course-blogs.html"
       },
-      "headline": "Medical Course Admission Guidance in Bangalore - Eduprov",
+      "headline": "Medical Course Blogs Admission Guidance in Bangalore",
       "description": "https://i.ibb.co/fpHQYkq/medical-banner.jpg",
-      "image": "",
+      "image": "https://eduprov.com/images/favicon.png",
       "author": {
         "@type": "Person",
         "name": "thephotogenicbug"
@@ -34,42 +34,47 @@
       "dateModified": "2021-07-2"
     }
   </script>
-  <meta name="description"
-    content="Medical courses offered in various specialisations including medical and biomedical sciences, pharmacy. allied health, nursing, health, and fitness" />
-  <meta name="keywords" content="" />
+  <meta name="description" content="Medical courses offered in various specialisations including medical and biomedical sciences, pharmacy. allied health, nursing, health, and fitness">
+  <meta name="keywords" content=" 
+  
+  ">
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Medical Course Admission Guidance in Bangalore - Eduprov" />
-  <meta property="og:url" content="https://eduprov.com/medical-course-blogs.html" />
-  <meta property="og:site_name" content="Eduprov" />
+  <meta property="og:title" content="Medical Course Blogs Admission Guidance in Bangalore" />
+  <meta property="og:url" content="" />
+  <meta property="og:site_name" content="Eduprov Educational Institute" />
   <meta property="og:description"
     content="Medical courses offered in various specialisations including medical and biomedical sciences, pharmacy. allied health, nursing, health, and fitness" />
-  <meta property="og:image" content="https://i.ibb.co/fpHQYkq/medical-banner.jpg" />
+  <meta property="og:image" content="#" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@eduprov" />
-  <meta name="twitter:title" content="Medical Course Admission Guidance in Bangalore - Eduprov" />
+  <meta name="twitter:title" content="Medical Course Blogs Admission Guidance in Bangalore" />
   <meta name="twitter:description"
     content="Medical courses offered in various specialisations including medical and biomedical sciences, pharmacy. allied health, nursing, health, and fitness" />
-  <meta name="twitter:image" content="https://i.ibb.co/fpHQYkq/medical-banner.jpg" />
+  <meta name="twitter:image" content="#" />
   <meta name="twitter:url" content="https://twitter.com/eduprov" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
   <meta name="author" content="thephotogenicbug">
   <link rel="stylesheet" href="blog.css" />
+  <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
-  </script>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </head>
 
+
+<!-- 
+
+ 
+
+ -->
 <body>
   <nav>
     <div class="hamburger">
@@ -79,7 +84,8 @@
     </div>
     <ul class="nav-links">
       <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
-      <li style="font-weight: bold;"><a href="https://eduprov-application.vercel.app/#/">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
     </ul>
   </nav>
   <div id="logo">
@@ -167,7 +173,7 @@
               <div class="content">
                 <label class="title fz-20">Bachelor of Medicine and Bachelor of Surgery</label>
                 <div class="desc">
-                  <p>
+                  <p >
                     MBBS considered to be the most supreme Course in Medical sphere.
                   </p>
                 </div>
@@ -200,7 +206,7 @@
               <div class="content">
                 <label class="title fz-20">B.S.M.S (Bachelor of Siddha Medicine and Surgery)</label>
                 <div class="desc">
-                  <p>
+                  <p >
                     Siddha Medicine & Surgery teaches to revitalize & rejuvenate dysfunctional organs that cause the
                     disease.
                   </p>
@@ -217,7 +223,7 @@
               <div class="content">
                 <label class="title fz-20">Bachelor of Physiotherapy</label>
                 <div class="desc">
-                  <p>
+                  <p >
                     BPT or Bachelor of Physiotherapy is an allied health
                     professional program which deals with the science of physical movement.
                   </p>
@@ -287,7 +293,7 @@
               <div class="content">
                 <label class="title fz-20">Master of Dental Surgery (M.D.S)</label>
                 <div class="desc">
-                  <p>
+                  <p >
                     Master of Dental Surgery (MDS) students master the different disciplines & specialization in
                     dentistry.
                   </p>
@@ -322,7 +328,7 @@
               <div class="content">
                 <label class="title fz-20">Master of Medicine in Unani</label>
                 <div class="desc">
-                  <p>
+                  <p >
                     MD Unani is 3year master course in field of Unani medicines to get admission student need to clear
                     entrance test.
                   </p>
@@ -340,7 +346,7 @@
               <div class="content">
                 <label class="title fz-20">MD Anaesthesia Course</label>
                 <div class="desc">
-                  <p>
+                  <p >
                     MD Anesthesia enable graduates to perform the use of medicine to prevent pain during surgery & other
                     procedures.
                   </p>
