--- a/diploma-in-health-inspector-course.html
+++ b/diploma-in-health-inspector-course.html
@@ -2,90 +2,103 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Diploma in Health Inspector Admission, Colleges | Eduprov</title>
-  <meta name="description"
-    content="Health Inspector teaches identification, planning, implementation evaluation of environs public health. Admission, Top Colleges, Eligibility, Scope | EDUPROV">
-  <meta name="keywords" content="">
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="canonical" href="https://eduprov.com/diploma-in-health-inspector-course.html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Diploma in Health Inspector Admission Guidance in Bangalore</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://eduprov.com/diploma-in-health-inspector-course.html"
+      },
+      "headline": "Diploma in Health Inspector Admission Guidance in Bangalore",
+      "description": "Diploma in Health Inspector is a highly lucrative job and made for Students who
+      wish to get a job right after College in the field of pharmacy, especially in the Government
+        sectors After finishing the Course, Students can apply for the post of Health Inspectors,",
+      "image": "https://eduprov.com/images/favicon.png",  
+      "author": {
+        "@type": "Person",
+        "name": "thephotogenicbug"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "Eduprov",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://eduprov.com/images/favicon.png"
+        }
+      },
+      "datePublished": "2021-08-11",
+      "dateModified": "2021-08-11"
+    }
+    </script>
+  <meta name="description" content="Diploma in Health Inspector is a highly lucrative job and made for Students who
+  wish to get a job right after College in the field of pharmacy, especially in the Government
+    sectors After finishing the Course, Students can apply for the post of Health Inspectors,">
+  <meta name="keywords" content=" diploma in health inspector,diploma in sanitary inspector,diploma in health inspector course,sanitary inspector diploma course,diploma in health sanitary inspector,diploma health inspector,paramedical health inspector,diploma in food inspector,diploma in health and sanitary inspector,diploma in health inspector salary,pg diploma in sanitary inspector course,pg diploma in sanitary inspector course eligibility,diploma sanitary inspector,pg diploma in health inspector,sanitary diploma,pg diploma in sanitary inspector,pg diploma sanitary inspector course,sanitary diploma course,diploma in health inspector course duration,diploma in sanitary health inspector,diploma in health inspector syllabus,diploma course in health inspector,health sanitary inspector diploma,after diploma in health inspector,diploma in sanitary inspector distance education,diploma in food inspector course,diploma in health inspector admission 2020,diploma sanitary inspector course,diploma in health inspector course details,diploma in sanitary,lbs diploma in health inspector course 2020,diploma in health inspector admission,
+
+  ">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Diploma in Health Inspector Admission Guidance in Bangalore" />
+  <meta property="og:url" content="https://eduprov.com/diploma-in-health-inspector-course.html" />
+  <meta property="og:site_name" content="Eduprov Educational Institute" />
+  <meta property="og:description"
+    content="Diploma in Health Inspector is a highly lucrative job and made for Students who
+    wish to get a job right after College in the field of pharmacy, especially in the Government
+      sectors After finishing the Course, Students can apply for the post of Health Inspectors," />
+  <meta property="og:image" content="#" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@eduprov" />
+  <meta name="twitter:title" content="Diploma in Health Inspector Admission Guidance in Bangalore" />
+  <meta name="twitter:description"
+    content="Diploma in Health Inspector is a highly lucrative job and made for Students who
+    wish to get a job right after College in the field of pharmacy, especially in the Government
+      sectors After finishing the Course, Students can apply for the post of Health Inspectors," />
+  <meta name="twitter:image" content="#" />
+  <meta name="twitter:url" content="https://twitter.com/eduprov" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
   <meta name="author" content="thephotogenicbug">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
-  <link rel="stylesheet" href="../blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="blog.css" />
+  <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 
 </head>
 
 <body>
-  <div class="bootstrap-nav">
-
-    <nav class="navbar navbar-expand-md  navbar-light bg-dark">
-      <a href="#" class="navbar-brand">
-        <div id="logo">
-          <img src="images/logo-white.png" alt="Edu-logo" />
-        </div>
-      </a>
-      <button type="button " style="background-color: white" class="navbar-toggler ml-5" data-toggle="collapse"
-        data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-
-        <div class="navbar-nav ml-auto ">
-          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i
-              class="fa fa-home"></i> Home</a>
-          <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-phone-square"></i> Contact</a>
-          <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-user"></i> Student Form</a>
-        </div>
-
-      </div>
-
-    </nav>
-  </div>
-  <!--Nav Bar End-->
-
-  <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
-      height: 350px;
-      background-position: center center;
-      background-size: cover;">
-
-    <div class="container text-white">
-      <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1>Diploma in Health Inspector</h1>
-        </div>
-      </div>
+  <nav>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
     </div>
+    <ul class="nav-links">
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
+    </ul>
+  </nav>
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
-
-  <!--Course Start-->
-  </div>
-  <div class="container mt-2">
+  <div class="container text-white">
+      
     <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
-          Course
-        </h2>
-        <div id="google_translate_element"></div>
-        <script type="text/javascript">
-          function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-              pageLanguage: 'en'
-            }, 'google_translate_element');
-          }
-        </script>
-
-        <script type="text/javascript"
-          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-        </script>
+      <div class="col-md-8 mt-5 pt-3">
+        <h1 class="text-dark">Diploma in Health Inspector</h1>
       </div>
     </div>
   </div>
@@ -107,7 +120,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
+        <h2 class="text-center text-dark" id="tag-font">
           Eligibility
         </h2>
       </div>
@@ -134,7 +147,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
+        <h2 class="text-center text-dark" id="tag-font">
           List of colleges
         </h2>
       </div>
@@ -201,7 +214,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h3 class="text-center text-primary" id="tag-font">
+        <h3 class="text-center text-dark" id="tag-font">
           Scope
         </h3>
       </div>
