--- a/education-course-blogs.html
+++ b/education-course-blogs.html
@@ -2,24 +2,71 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Education Course Information Scope Exam Details | Eduprov</title>
-  <meta name="description" content="Education is the study of the process of receiving and giving systematic instruction. AS a degree, it mixes a theoretical grounding in the history, anthropology, sociology
-  " />
-<meta name="keywords" content="education course,bachelor of education,teacher training courses,montessori teacher,best computer courses after 12th,teaching education,teacher education program,professional development courses,ba education,preservice teachers,pre service teacher education,ncte recognized teacher education programme,education courses for teachers,education honours,ba ed,montessori training near me,nursery teacher training course online,montessori training course,teacher preparation,preschool teacher training,teacher education institute,teacher and teaching education,ncte teacher education programme,ba education subject,ncte recognised teacher education programme,orientation programme for teachers,national teacher training,teacher preschool,schools for education,postgraduate teacher training,professional development courses for teachers,educator preparation program,one education courses,summer courses for teachers 2020,becoming a preschool teacher,becoming a kindergarten teacher,montessori training institute,best schools for education,teacher development program,four semester teacher education program,teacher ma,best teaching schools,preschool teacher education,faculty of teacher training and education,post secondary teacher,ba education studies,one year teaching course,secondary education teacher,school induction,schools for teaching,faculty development programme for teachers 2020,secondary school teacher training,montessori school teacher,professional development for preschool teachers,second career for teachers,teacher leadership programs,orientation and refresher courses in teacher education,school of education rankings,ba education honours,school induction programme,teacher librarian courses,professional development training for teachers,teacher development courses,night school teacher,programs for teachers,secondary education programs,education to become a teacher,montessori training institute near me,ncte approved courses,student teaching program,preschool teacher schooling,new teacher induction,good schools for teaching,best teaching programs,school of teacher education,professional teaching courses,teacher education and teacher training,post secondary teaching,national academy of teacher training and education,school teacher course,best teacher education programs,teacher education programs of developed countries,best teaching schools in the us,montessori teacher education,senior leadership courses for teachers,nursery teacher education programme,new teacher education curriculum,school education online,school education program,national school of education and teaching,teacher education programme recognised by ncte,teacher education development program,office of teacher education,orientation course in teacher education,educator preparation program online,bachelor of teaching course,programme in grade r teaching,
-
-  " />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="canonical" href="https://eduprov.com/education-course-blogs.html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Education Course Admission Guidance in Bangalore</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://eduprov.com/education-course-blogs.html"
+      },
+      "headline": "Education Course Admission Guidance in Bangalore",
+      "description": "Education Course information Admission Guidance Career counseling in Bangalore",
+      "image": "https://eduprov.com/images/favicon.png",  
+      "author": {
+        "@type": "Person",
+        "name": "thephotogenicbug"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "Eduprov",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://eduprov.com/images/favicon.png"
+        }
+      },
+      "datePublished": "2021-08-11",
+      "dateModified": "2021-08-11"
+    }
+    </script>
+  <meta name="description" content="Education Course information Admission Guidance Career counseling in Bangalore">
+  <meta name="keywords" content=" 
+   education course,bachelor of education,teacher training courses,montessori teacher,best computer courses after 12th,teaching education,teacher education program,professional development courses,ba education,preservice teachers,pre service teacher education,ncte recognized teacher education programme,education courses for teachers,education honours,ba ed,montessori training near me,nursery teacher training course online,montessori training course,teacher preparation,preschool teacher training,teacher education institute,teacher and teaching education,ncte teacher education programme,ba education subject,ncte recognised teacher education programme,orientation programme for teachers,national teacher training,teacher preschool,schools for education,postgraduate teacher training,professional development courses for teachers,educator preparation program,one education courses,summer courses for teachers 2020,becoming a preschool teacher,becoming a kindergarten teacher,montessori training institute,best schools for education,teacher development program,four semester teacher education program,teacher ma,best teaching schools,preschool teacher education,faculty of teacher training and education,post secondary teacher,ba education studies,one year teaching course,secondary education teacher,school induction,schools for teaching,faculty development programme for teachers 2020,secondary school teacher training,montessori school teacher,professional development for preschool teachers,second career for teachers,teacher leadership programs,orientation and refresher courses in teacher education,school of education rankings,ba education honours,school induction programme,teacher librarian courses,professional development training for teachers,teacher development courses,night school teacher,programs for teachers,secondary education programs,education to become a teacher,montessori training institute near me,ncte approved courses,student teaching program,preschool teacher schooling,new teacher induction,good schools for teaching,best teaching programs,school of teacher education,professional teaching courses,teacher education and teacher training,post secondary teaching,national academy of teacher training and education,school teacher course,best teacher education programs,teacher education programs of developed countries,best teaching schools in the us,montessori teacher education,senior leadership courses for teachers,nursery teacher education programme,new teacher education curriculum,school education online,school education program,national school of education and teaching,teacher education programme recognised by ncte,teacher education development program,office of teacher education,orientation course in teacher education,educator preparation program online,bachelor of teaching course,programme in grade r teaching,
+  ">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Education Course Admission Guidance in Bangalore" />
+  <meta property="og:url" content="https://eduprov.com/education-course-blogs.html" />
+  <meta property="og:site_name" content="Eduprov Educational Institute" />
+  <meta property="og:description"
+    content="Education Course information Admission Guidance Career counseling in Bangalore" />
+  <meta property="og:image" content="#" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@eduprov" />
+  <meta name="twitter:title" content="Education Course Admission Guidance in Bangalore" />
+  <meta name="twitter:description"
+    content="Education Course information Admission Guidance Career counseling in Bangalore" />
+  <meta name="twitter:image" content="#" />
+  <meta name="twitter:url" content="https://twitter.com/eduprov" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
   <meta name="author" content="thephotogenicbug">
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
   <link rel="stylesheet" href="blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 
 </head>
 
@@ -32,7 +79,8 @@
     </div>
     <ul class="nav-links">
       <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
-      <li style="font-weight: bold;"><a href="https://eduprov-application.vercel.app/#/">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
     </ul>
   </nav>
   <div id="logo">
@@ -70,7 +118,7 @@
               <div class="content">
                 <label class="title fz-20">Bachelor of Education</label>
                 <div class="desc">
-                  <p>
+                  <p >
                     B.Ed Course is professional degree to become teachers in school or college.
                   </p>
                 </div>
@@ -104,7 +152,7 @@
               <div class="content">
                 <label class="title fz-20">Master of Education</label>
                 <div class="desc">
-                  <p>
+                  <p >
                     MEd or Master of Education student can take on specialized in teaching & supervisory roles in the field.
                   </p>
                 </div>
