--- a/exams-blogs.html
+++ b/exams-blogs.html
@@ -2,26 +2,71 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="canonical" href="" />
-  <title>Exam Information Exam Fees Exam Eligibility Exam Pattern | Eduprov</title>
-  <meta name="description" content="Exam Information Exam Fees Exam Pattern Eligibility 
-    " />
-  <meta name="keywords" content="
-    
-    " />
-
-    <meta name="author" content="thephotogenicbug">
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="canonical" href="https://eduprov.com/exams-blogs.html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Exam Information Admission Guidance in Bangalore</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://eduprov.com/exams-blogs.html"
+      },
+      "headline": "Exam Information Admission Guidance in Bangalore",
+      "description": "Exam Information Admission Guidance in Bangalore at eduprov",
+      "image": "https://eduprov.com/images/favicon.png",  
+      "author": {
+        "@type": "Person",
+        "name": "thephotogenicbug"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "Eduprov",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://eduprov.com/images/favicon.png"
+        }
+      },
+      "datePublished": "2021-08-11",
+      "dateModified": "2021-08-11"
+    }
+    </script>
+  <meta name="description" content="Exam Information Admission Guidance in Bangalore at eduprov">
+  <meta name="keywords" content=" 
+  
+  ">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Exam Information Admission Guidance in Bangalore" />
+  <meta property="og:url" content="https://eduprov.com/exams-blogs.html" />
+  <meta property="og:site_name" content="Eduprov Educational Institute" />
+  <meta property="og:description"
+    content="Exam Information Admission Guidance in Bangalore at eduprov" />
+  <meta property="og:image" content="" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@eduprov" />
+  <meta name="twitter:title" content="Exam Information Admission Guidance in Bangalore" />
+  <meta name="twitter:description"
+    content="Exam Information Admission Guidance in Bangalore at eduprov" />
+  <meta name="twitter:image" content="#" />
+  <meta name="twitter:url" content="https://twitter.com/eduprov" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
+  <meta name="author" content="thephotogenicbug">
   <link rel="stylesheet" href="blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 
  
 </head>
@@ -35,7 +80,8 @@
     </div>
     <ul class="nav-links">
       <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
-      <li style="font-weight: bold;"><a href="https://eduprov-application.vercel.app/#/">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
     </ul>
   </nav>
   <div id="logo">
