--- a/school-blogs.html
+++ b/school-blogs.html
@@ -2,27 +2,74 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>School Information Academic Details |Eduprov</title>
-  <meta name="description" content="A school is an educational institution designed to provide learning spaces and learning environments for the teaching of students or pupilsunder the direction of teachers.
-  " />
-<meta name="keywords" content="
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="canonical" href="https://eduprov.com/school-blogs.html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>School Blogs Admission Guidance in Bangalore</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://eduprov.com/school-blogs.html"
+      },
+      "headline": "School Blogs Admission Guidance in Bangalore",
+      "description": "A school is an educational institution designed to provide learning spaces and learning environments for the teaching of students or pupilsunder the direction of teachers.",
+      "image": "https://eduprov.com/images/favicon.png",  
+      "author": {
+        "@type": "Person",
+        "name": "thephotogenicbug"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "Eduprov",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://eduprov.com/images/favicon.png"
+        }
+      },
+      "datePublished": "2021-08-11",
+      "dateModified": "2021-08-11"
+    }
+    </script>
+  <meta name="description" content="A school is an educational institution designed to provide learning spaces and learning environments for the teaching of students or pupilsunder the direction of teachers.">
+  <meta name="keywords" content=" 
   
-  " />
+  ">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="School Blogs Admission Guidance in Bangalore" />
+  <meta property="og:url" content="https://eduprov.com/school-blogs.html" />
+  <meta property="og:site_name" content="Eduprov Educational Institute" />
+  <meta property="og:description"
+    content="A school is an educational institution designed to provide learning spaces and learning environments for the teaching of students or pupilsunder the direction of teachers." />
+  <meta property="og:image" content="#" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@eduprov" />
+  <meta name="twitter:title" content="School Blogs Admission Guidance in Bangalore" />
+  <meta name="twitter:description"
+    content="A school is an educational institution designed to provide learning spaces and learning environments for the teaching of students or pupilsunder the direction of teachers." />
+  <meta name="twitter:image" content="#" />
+  <meta name="twitter:url" content="https://twitter.com/eduprov" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
   <meta name="author" content="thephotogenicbug">
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
   <link rel="stylesheet" href="blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 
 </head>
-
+<!--  -->
 <body>
 
   <nav>
@@ -33,7 +80,8 @@
     </div>
     <ul class="nav-links">
       <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
-      <li style="font-weight: bold;"><a href="https://eduprov-application.vercel.app/#/">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
     </ul>
   </nav>
   <div id="logo">
@@ -481,7 +529,7 @@
                   <label class="title fz-20"> Sindhi High School (Kumara Krupa)</label>
                   <div class="desc">
                     <p>
-                      SINDHI HIGH SCHOOL. KK ROAD Campus Hebbal Campus
+                      Sindhi high school which was started in 1982 at No. 10 / 7, Kumarakrupa Road with one section each from Nursery to Class-II with a total strength of 120 pupils and the First Batch of Class X securing 100% First Class results and maintaining the same level of results, is now teeming with 1500 students, having 3 sections from Nursery to X.
                     </p>
                   </div>
                   <span class="link">Read More <i class="fa fa-arrow-right"></i></span>
@@ -545,7 +593,7 @@
                   <label class="title fz-20">St. Francis Xavier Girls High School </label>
                   <div class="desc">
                     <p>
-                      t Francis Xavier Girls high school is one of the best institutions in India and one of the top five institutions in karnataka for girls.
+                       Francis Xavier Girls high school is one of the best institutions in India and one of the top five institutions in karnataka for girls.
                     </p>
                   </div>
                   <span class="link">Read More <i class="fa fa-arrow-right"></i></span>
@@ -608,8 +656,8 @@
                 <div class="content">
                   <label class="title fz-20">The Valley School  </label>
                   <div class="desc">
-                    <p>
-                      he Valley School is based on the teachings of the eminent philosopher and a great thinker of our times, Jiddu Krishnamurti. It is located in a 120 acres campus
+                    <p >
+                      The Valley School is based on the teachings of the eminent philosopher and a great thinker of our times, Jiddu Krishnamurti. It is located in a 120 acres campus
                     </p>
                   </div>
                   <span class="link">Read More <i class="fa fa-arrow-right"></i></span>
@@ -624,7 +672,7 @@
                 <div class="content">
                   <label class="title fz-20">Treamis World School  </label>
                   <div class="desc">
-                    <p>
+                    <p >
                       Treamis is a Kindergarten to 12th grade, co-educational day and boarding international school located near Electronics City in Bangalore, India.
                     </p>
                   </div>
@@ -640,7 +688,7 @@
                 <div class="content">
                   <label class="title fz-20"> United Mission School  </label>
                   <div class="desc">
-                    <p>
+                    <p >
                       United Mission High School, Kalinga Rao Rd, Sampangi Rama Nagar, Bengaluru, Karnataka 560002 High School in Sampangi Rama Nagar, Bangalore
                     </p>
                   </div>
@@ -672,7 +720,7 @@
                 <div class="content">
                   <label class="title fz-20"> VIBGYOR High School  </label>
                   <div class="desc">
-                    <p>
+                    <p >
                       VIBGYOR HIGH. Bengaluru. BTM Layout Bannerghatta Chokkanahalli Electronic City Haralur Hennur Horamavu HSR Layout Jakkur Kadugodi Marathahalli Yelahanka.
                     </p>
                   </div>
